deploy/yaml/step15/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebpf-ml-mao-ui
  namespace: ebpf-obs
spec:
  type: NodePort
  selector:
    app: ebpf-ml-mao-analyzer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30002
